--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3c3c3 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  min-height: 100vh;
+  margin: 0;
+}
+
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.timeline__container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 90vw;
+  position: relative;
+  overflow-x: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.timeline__container::after {
+  background-color: #e17b77;
+  content: "";
+  top: calc(50% - 2px);
+  position: absolute;
+  width: 1860px; /* Change just this one when adding new event for containing responsive line*/
+  height: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timeline__item {
+  display: flex;
+  align-items: flex-start;
+  min-height: 500px;
+  padding-bottom: 30px;
+  margin: 10px 0;
+}
+
+.timeline__item:nth-child(odd) {
+  padding-top: 30px;
+  padding-bottom: 0;
+  align-items: flex-end;
+}
+
+.timeline__item__content {
+  position: relative;
+  background-color: whitesmoke;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  height: 48%;
+  width: 350px;
+  margin: 0 10px;
+  padding: 15px 20px;
+}
+
+.timeline__item__content::after {
+  position: absolute;
+  content: "";
+  background-color: whitesmoke;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+  transform: rotate(45deg);
+  width: 15px;
+  height: 15px;
+  right: calc(50% - 7.5px);
+  bottom: -7.5px;
+}
+
+.timeline__item:nth-child(odd) .timeline__item__content::after {
+  position: absolute;
+  content: "";
+  background-color: whitesmoke;
+  box-shadow: -1px -1px 1px rgba(0, 0, 0, 0.2);
+  transform: rotate(45deg);
+  width: 15px;
+  height: 15px;
+  right: calc(50% - 7.5px);
+  top: -7.5px;
+  bottom: auto;
+}
+
+.timeline__item__content__event {
+  display: flex;
+  justify-content: space-between;
+}
+
+.timeline__item__content .tag {
+  font-size: 12;
+  text-transform: uppercase;
+  padding: 6px 8px;
+  color: whitesmoke;
+}
+
+.timeline__item:nth-child(odd) .timeline__item__content .tag {
+  font-size: 12;
+  text-transform: uppercase;
+  padding: 6px 8px;
+  color: black;
+}
+
+.timeline__item__content .circle {
+  background-color: purple;
+  border-radius: 50%;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: calc(50% - 10px);
+  bottom: -35px;
+  z-index: 100;
+  border: 3px solid #e17b77;
+}
+
+.timeline__item:nth-child(odd) .timeline__item__content .circle {
+  background-color: purple;
+  border-radius: 50%;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: calc(50% - 10px);
+  top: -35px;
+  z-index: 100;
+  border: 3px solid #e17b77;
 }
